[project]
name = "hns"
version = "0.1.0"
description = "A speech-to-text CLI that records audio, transcribes it with `faster-whisper`, and copies the resulting text to the clipboard."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "faster-whisper>=1.1.1",
    "numpy>=2.2.6",
    "pyperclip>=1.9.0",
    "sounddevice>=0.5.2",
]

[project.scripts]
hns = "hns.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "W", "TID", "PTH", "Q"]
